[package]
name = "nostrweet"
version = "0.1.0"
edition = "2021"
description = "CLI tool to download tweets and their media"

[lib]
name = "nostrweet"
path = "src/lib.rs"

[[bin]]
name = "nostrweet"
path = "src/main.rs"

[dependencies]
flate2 = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
regex = "1.9"
url = "2.4"
dotenv = "0.15"
tokio-util = { version = "0.7", features = ["codec"] }
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3"
sanitize-filename = "0.5"

# Nostr-related dependencies
nostr-sdk = { version = "0.42", features = ["all-nips"] }
secp256k1 = { version = "0.28", features = ["rand-std"] }
sha256 = "1.4"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
rand = "0.9.1"
backoff = { version = "0.4.0", features = ["tokio"] }
glob = "0.3.2"
html-escape = "0.2"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
tokio-test = "0.4"
pretty_assertions = "1.4"
