[workspace]
members = [
    "nostrweet",
    "nostrweet-integration-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["nostrweet contributors"]

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tempfile = "3.8"
nostr-sdk = { version = "0.42", features = ["all-nips"] }
hex = "0.4"