[package]
name = "nostrweet"
version.workspace = true
edition.workspace = true
description = "CLI tool to download tweets and their media"

[lib]
name = "nostrweet"
path = "src/lib.rs"

[[bin]]
name = "nostrweet"
path = "src/main.rs"

[dependencies]
flate2 = "1.0"
anyhow.workspace = true
thiserror = "1.0"
clap.workspace = true
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "native-tls-vendored"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util = "0.3"
regex = "1.9"
url = "2.4"
dotenv = "0.15"
tokio-util = { version = "0.7", features = ["codec"] }
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3"
sanitize-filename = "0.5"

# Nostr-related dependencies
nostr-sdk.workspace = true
secp256k1 = { version = "0.28", features = ["rand-std"] }
bip39 = "2.0"
sha256 = "1.4"
sha2 = "0.10"
hex.workspace = true
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
rand = "0.9.1"
backoff = { version = "0.4.0", features = ["tokio"] }
glob = "0.3.2"
html-escape = "0.2"

[dev-dependencies]
tempfile.workspace = true
mockito = "1.2"
tokio-test = "0.4"
pretty_assertions = "1.4"